@@ -4,6 +4,7 @@ NAS4Free 10.2.0.2 - Prester
 Changes:
 - Upgrade to FreeBSD 10.2-RELEASE-P2.
 - Add Mellanox ConnectX-2 EN driver module. (x64 only)
+- Add Auxiliary parameters in Samba AD.
 - Upgrade bash 4.3 to patch 42.
 - Upgrade lighttpd to 1.4.37.
 - Upgrade php to 5.6.13.
